# vikunja-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ecosystem-implementations.md  view-operations.md
docs/assets/screenshots/: manifest.json
examples/: log.example.jsonl  task.example.yaml
scripts/: capture_vikunja_screenshots.py  claim_and_prepare.py  close_completed_local_tasks.py  import_taskwarrior_json.py  report_task_result.py  run_task_with_aider.py
src/vikunja_mcp/: __init__.py  config.py  db.py  errors.py  filters.py  logging_utils.py  main.py  mcp_server.py  models.py  state_machine.py  sync_engine.py  vikunja_client.py
src/vikunja_mcp/schemas/: __init__.py  task_file.py  tool_io.py
src/vikunja_mcp/tools/: __init__.py  add_execution_note.py  claim_next_task.py  common.py  context.py  create_task.py  get_task.py  get_view_tasks.py  list_project_views.py  list_tasks.py  move_task_position.py  move_task_to_bucket.py  sync_fs_tasks.py  transition_task.py  update_task.py
tests/: test_claim_logic.py  test_create_task_idempotency.py  test_list_tasks_tool.py  test_state_machine.py  test_sync_engine.py  test_update_task_tool.py  test_view_tools.py  test_vikunja_client.py
